# sketch-ideation

./: .gitignore  README.md  pyproject.toml
assets/: README.md
blender_ideation/: ai_services.py  app.py  blender_integration.py  data_models.py  utils.py
